@@ -1,0 +1,1 @@
+${testbaseurl}/download/java/java/21.0.8_9/java-21.0.8_9.dmg
