@@ -1,0 +1,4 @@
+#********************************************************************************
+# This file contains configuration variables for your IDE
+#********************************************************************************
+IDE_ROOT=${user.home}/projects
