@@ -1,0 +1,3 @@
+#********************************************************************************
+# This file contains project specific environment variables
+#********************************************************************************
